<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ShowExpenseFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/showExpenseLabelId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/ShowExpenseLabel"
            android:textStyle="bold"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvExpenseNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/ExpenseNameShowLabel"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showExpenseLabelId" />

        <TextView
            android:id="@+id/tvExpenseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="26dp"
            android:text="@string/ExpenseNameShow"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@+id/tvExpenseNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/showExpenseLabelId" />

        <TextView
            android:id="@+id/categoryShowLabelId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/CategoryShow"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvExpenseNameLabel" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="31dp"
            android:text="@string/CategoryShowData"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@+id/categoryShowLabelId"
            app:layout_constraintTop_toBottomOf="@+id/tvExpenseName" />

        <TextView
            android:id="@+id/AmountShowLabelId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/AmountShowLabel"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryShowLabelId" />

        <TextView
            android:id="@+id/dateShowLabelId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:text="@string/DateShowLabel"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AmountShowLabelId" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="29dp"
            android:text="@string/AmountShow"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@+id/AmountShowLabelId"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

        <TextView
            android:id="@+id/tvExpenseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="26dp"
            android:text="@string/ExpenseDateShow"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@+id/dateShowLabelId"
            app:layout_constraintTop_toBottomOf="@+id/tvAmount" />
        <Button
            android:id="@+id/btnedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="80dp"
            android:text="Edit Expense"
            app:layout_constraintBottom_toBottomOf="@id/btnClose"
            app:layout_constraintEnd_toEndOf="@id/btnClose"
            app:layout_constraintStart_toStartOf="@id/btnClose" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="80dp"
            android:text="@string/ButtonClose"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>