<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddExpenseFragment"
    android:id="@+id/fragmentExpenseAdd">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewAddExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewAddExpense"
            android:layout_marginStart="155dp"
            android:layout_marginTop="42dp"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_marginEnd="155dp"
            android:layout_marginBottom="670dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textViewExpenseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewAddExpense"
            android:layout_marginStart="16dp"
            android:layout_marginTop="97dp"
            android:layout_marginEnd="294dp"
            android:layout_marginBottom="615dp"
            android:text="@string/textViewExpenseName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameeditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewExpenseName"
            android:layout_marginStart="16dp"
            android:layout_marginTop="127dp"
            android:layout_marginEnd="182dp"
            android:layout_marginBottom="559dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameeditText"
            android:layout_marginStart="16dp"
            android:layout_marginTop="203dp"
            android:layout_marginEnd="331dp"
            android:layout_marginBottom="509dp"
            android:text="@string/textViewCategory"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="365dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCategory" />



        <TextView
            android:id="@+id/textViewAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerCategory"
            android:layout_marginStart="16dp"
            android:layout_marginTop="305dp"
            android:layout_marginEnd="338dp"
            android:layout_marginBottom="407dp"
            android:text="@string/textViewAmount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/amounteditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewAmount"
            android:layout_marginStart="15dp"
            android:layout_marginTop="331dp"
            android:layout_marginEnd="183dp"
            android:layout_marginBottom="355dp"
            android:ems="10"
            android:hint="Amount"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addExpenseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/buttonAddExpense"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amounteditText" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:text="@string/cancelButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/addExpenseButton"
            app:layout_constraintTop_toBottomOf="@+id/amounteditText" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>