<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ExpenseAppFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/currentExpensestextView"
            android:layout_width="138dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="61dp"
            android:layout_marginEnd="257dp"
            android:layout_marginBottom="632dp"
            android:text="@string/currentExpensestextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="247dp"
            android:layout_marginTop="49dp"
            android:layout_marginEnd="76dp"
            android:layout_marginBottom="634dp"
            android:text="@string/addButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/noExpensetextView"
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="127dp"
            android:layout_marginEnd="41dp"
            android:layout_marginBottom="568dp"
            android:text="@string/noExpenseView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/expenselistView"
            android:layout_width="395dp"
            android:layout_height="540dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="183dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>